--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <DT><A HREF="https://www.feijix.com/s/MBnCbsP">fran a,innes,elisa l,adele s</A>
 <DT><A HREF="https://www.mediafire.com/file/fhsh8c2s4cjmnwi/Orabelle+Koivu.rar/file">Orabelle K</A>
 <DT><A HREF="https://www.mediafire.com/file/0hrcsmstyio3p96/Estelle.rar/file">Estelle</A>
-<DT><A HREF="https://gofile.io/d/26b3b359-e2a6-455e-b8e4-b1c0a8995cce">Orabelle Koivu, Orabelle A, Agness & Estelle</A>
+<DT><A HREF="https://www.fireload.com/ef12a3cc3a05c50f/Orabelle_Koivu,_Orabelle_A,_Agness.rar">Orabelle Koivu, Orabelle A, Agness & Estelle</A>
 <DT><A HREF="https://www.feijix.com/s/qaUCR7Gk">ivy, vikki r</A>   
 <DT><A HREF="https://www.feijix.com/s/LhUCq9Ow">nadin, anatali</A>
 <DT><A HREF="https://www.feijix.com/s/DwUCtYzI">val, dak, ali amo, a jade, julie a</A>
@@ -118,8 +118,7 @@
 <DT><A HREF="https://kdocs.cn/l/cqiih0cT7xSk">Alessa Z, Izabel A, Liza2</A>
 <DT><A HREF="https://kdocs.cn/l/ccTx68I7mZA3">Polly Pure_</A>
 <DT><A HREF="https://kdocs.cn/l/cqiY2DybRRBK">lilu rose_</A>
-<DT><A HREF="https://ranoz.gg/file/yi0rFKrx">Elle Mira</A>
-<DT><A HREF="https://gofile.io/d/xvEMM4">Amelia (Gin), Kateryna, Kira</A>
+<DT><A HREF="https://www.fireload.com/523476a2dc35eafb/Elle+Mira.rar">Elle Mira</A>
 <DT><A HREF="https://wwax.lanzouu.com/ifesf309jyyf">decima</A>
 <DT><A HREF="https://wwax.lanzouu.com/iIGWU2yo835c">lety star</A>
 <DT><A HREF="https://www.fireload.com/078932867c606b72/hareniks.rar">hareniks</A>
