--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <DT><A HREF="https://www.mediafire.com/file/fhsh8c2s4cjmnwi/Orabelle+Koivu.rar/file">Orabelle K</A>
 <DT><A HREF="https://www.mediafire.com/file/0hrcsmstyio3p96/Estelle.rar/file">Estelle</A>
 <DT><A HREF="https://www.fireload.com/ef12a3cc3a05c50f/Orabelle_Koivu,_Orabelle_A,_Agness.rar">Orabelle Koivu, Orabelle A, Agness & Estelle</A>
-<DT><A HREF="https://www.fireload.com/fd42ff2e4c7c74fd/shirley+tate,+Ruslana.rar">shirley tate, Ruslana/A>
+<DT><A HREF="https://www.fireload.com/fd42ff2e4c7c74fd/shirley+tate,+Ruslana.rar">shirley tate, Ruslana</A>
 <DT><A HREF="https://www.fireload.com/35410babf5aaa55f/Amaly,+Amili+V,+Daniella,+Milena+J.rar">Amaly, Amili V, Daniella, Milena J</A>
 <DT><A HREF="https://www.feijix.com/s/qaUCR7Gk">ivy, vikki r</A>   
 <DT><A HREF="https://www.feijix.com/s/LhUCq9Ow">nadin, anatali</A>
