--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 <DT><A HREF="https://www.feijix.com/s/MBnCbsP">fran a,innes,elisa l,adele s</A>
 <DT><A HREF="https://www.mediafire.com/file/fhsh8c2s4cjmnwi/Orabelle+Koivu.rar/file">Orabelle K</A>
 <DT><A HREF="https://www.mediafire.com/file/0hrcsmstyio3p96/Estelle.rar/file">Estelle</A>
-<DT><A HREF="https://www.fireload.com/ef12a3cc3a05c50f/Orabelle_Koivu,_Orabelle_A,_Agness.rar">Orabelle Koivu, Orabelle A, Agness & Estelle</A>
-<DT><A HREF="https://www.fireload.com/eb331b4d1fd0ba7c/Yassa,+isabella,+Elisabetta.rar">Yassa, isabella, Elisabetta</A>
+<DT><A HREF="https://wdfiles.ru/1uojh">Yassa, isabella, Elisabetta</A>
 <DT><A HREF="https://www.fireload.com/d17e555df714a52d/Eilona.rar">Eilona</A>
 <DT><A HREF="https://www.fireload.com/5c46ee9ea489e302/candy_rose.rar">candy rose</A>
 <DT><A HREF="https://www.fireload.com/8aa70ade6163933b/siena,+siya.rar">siena, siya</A>
@@ -130,4 +129,3 @@
 <DT><A HREF="https://wdfiles.ru/2alL2">ALICE NEKRASOVA.PART2</A>
 <DT><A HREF="https://wdfiles.ru/2alL0">ALICE NEKRASOVA.PART3</A>
 <DT><A HREF="https://wwax.lanzouu.com/iDOqh38g0qqf">Annabelle</A>
-   
