--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 <DT><A HREF="https://www.mediafire.com/file/fhsh8c2s4cjmnwi/Orabelle+Koivu.rar/file">Orabelle K</A>
 <DT><A HREF="https://www.mediafire.com/file/0hrcsmstyio3p96/Estelle.rar/file">Estelle</A>
 <DT><A HREF="https://wdfiles.ru/1uojh">Yassa, isabella, Elisabetta</A>
-<DT><A HREF="https://www.fireload.com/d17e555df714a52d/Eilona.rar">Eilona</A>
-<DT><A HREF="https://www.fireload.com/5c46ee9ea489e302/candy_rose.rar">candy rose</A>
-<DT><A HREF="https://www.fireload.com/8aa70ade6163933b/siena,+siya.rar">siena, siya</A>
+<DT><A HREF="https://wwax.lanzouu.com/i7F2K38kvt5c">Eilona</A>
+<DT><A HREF="https://wdfiles.ru/Or7f">candy rose</A>
+<DT><A HREF="https://wdfiles.ru/Or7l">siena, siya1</A>
+<DT><A HREF="https://wdfiles.ru/Or7i">siena, siya2</A>
+<DT><A HREF="https://wdfiles.ru/Or7h">siena, siya3</A>
 <DT><A HREF="https://wdfiles.ru/2Qjdg">shirley tate, Ruslana</A>
 <DT><A HREF="https://wdfiles.ru/2Qjdh">Amaly, Amili V, Daniella, Milena J</A>
 <DT><A HREF="https://www.feijix.com/s/qaUCR7Gk">ivy, vikki r</A>   
