--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=350516">wr17</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=350517">wr18</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=350518">wr19</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=352754">wr20</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=352755">wr21</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=352756">wr22</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=352757">wr23</A>      
  <p></p> 
  <DT><A HREF="http://www.1234i.com/">ip</A>
  <DT><A HREF="https://www.ip138.com/">ip0</A>
