--- a/index.html
+++ b/index.html
@@ -147,3 +147,4 @@
 <DT><A HREF="https://wdfiles.ru/2ammv">kay (j), Jessica Tolyda, Phiny, Sugari, Zena1</A><A HREF="https://wdfiles.ru/2ammt">　　　2</A><A HREF="https://wdfiles.ru/2amms">　　　3</A><A HREF="https://wdfiles.ru/2amml">　　　4</A>
 <DT><A HREF="https://wdfiles.ru/Ornb">mila (azul), milla (D)1</A><A HREF="https://wdfiles.ru/Orna">　　　2</A><A HREF="https://wdfiles.ru/Orn8">　　　3</A><A HREF="https://wdfiles.ru/Orn7">　　　4</A><A HREF="https://wdfiles.ru/Orn5">　　　5</A><A HREF="https://wdfiles.ru/Orn4">　　　6</A><A HREF="https://wdfiles.ru/Orn3">　　　7</A>
 <DT><A HREF="https://wdfiles.ru/Otqr">vilena; demont.rar</A>
+<DT><A HREF="https://wdfiles.ru/2aone">Freya Mayer1</A><A HREF="https://wdfiles.ru/Otsy">　　　2</A><A HREF="https://wdfiles.ru/Otsw">　　　3</A><A HREF="https://wdfiles.ru/Otsu">　　　4</A>
