--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <DT><A HREF="https://wdfiles.ru/2Qjdg">shirley tate, Ruslana</A>
 <DT><A HREF="https://wdfiles.ru/2Qjdh">Amaly, Amili V, Daniella, Milena J</A>
 <DT><A HREF="https://www.feijix.com/s/qaUCR7Gk">ivy, vikki r</A>   
-<DT><A HREF="https://www.feijix.com/s/LhUCq9Ow">nadin, anatali</A>
+<DT><A HREF="https://wdfiles.ru/1uskk">Anatali, arina; nadin a</A>
 <DT><A HREF="https://www.feijix.com/s/DwUCtYzI">val, dak, ali amo, a jade, julie a</A>
 <DT><A HREF="https://www.feijix.com/s/9XUCt1Qu">lane, sanija</A>
 <DT><A HREF="https://www.feijix.com/s/maUCt256">vel, alex, dai</A>
