--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
  <p></p> 
  <DT><A HREF="http://www.1234i.com/">ip</A>
  <DT><A HREF="https://www.ip138.com/">ip0</A>
+ <DT><A HREF="https://ncloud.info">sb</A>
+ <DT><A HREF="https://nflink.xyz">sb0</A>     
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-3VbLH.html">zcloud</A>
 <DT><A HREF="https://ln5.sync.com/dl/74707ca30/qysg9fib-mxuzypbf-h7sauia9-beay6wyx">ice_</A>
  <DT><A HREF="https://pic.imgdb.cn/item/65d331aa9f345e8d03d05d57.jpg">排班</A>
